adding support for sync gateway